--- a/CustomerAPI/appsettings.json
+++ b/CustomerAPI/appsettings.json
@@ -2,6 +2,10 @@
   "Database": {
     "ConnectionString": "Data Source=./customers.db"
   },
+  "Queue":
+  {
+    "Name":"customers"
+  },
   "GitHub": {
     "ApiBaseUrl": "https://api.github.com"
   },
